# rp2040-freeRTOS-smp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
boards/: CMakeLists.txt
boards/standard/: CMakeLists.txt
boards/standard/example-rtos-either-core/: CMakeLists.txt
boards/standard/example-rtos-standard/: CMakeLists.txt
boards/wave-share-lcd-1.2.8/: CMakeLists.txt
boards/wave-share-lcd-1.2.8/example-no-rtos/: CMakeLists.txt
boards/wave-share-lcd-1.28/: CMakeLists.txt
boards/wave-share-lcd-1.28/common/: CMakeLists.txt
boards/wave-share-lcd-1.28/common/Config/: CMakeLists.txt
boards/wave-share-lcd-1.28/common/GUI/: CMakeLists.txt
boards/wave-share-lcd-1.28/common/QMI8658/: CMakeLists.txt
boards/wave-share-lcd-1.28/example-no-rtos/: CMakeLists.txt
boards/wave-share-lcd-1.28/example-no-rtos/examples/: CMakeLists.txt  LCD_1in28_test.c
boards/wave-share-lcd-1.28/example-no-rtos/lib/GUI/: CMakeLists.txt
boards/wave-share-lcd-1.28/example-rtos/: CMakeLists.txt  FreeRTOSConfig.h  lcd_example.c
boards/wave-share-lcd-1.28/example-rtos-either-core/: CMakeLists.txt  rtos_either_core.c
boards/wave-share-lcd-1.28/example-rtos-smp/: CMakeLists.txt  FreeRTOSConfig.h  rtos_smp.c
boards/wave-share-lcd-1.28/ws-lcd-128-lib/Fonts/: CMakeLists.txt  fonts.h
boards/wave-share-lcd-1.28/ws-lcd-128-lib/GUI/: GUI_Paint.c
boards/wave-share-lcd-1.28/ws-lcd-128-lib/LCD/: CMakeLists.txt
boards/wave-share-lcd-1.28/ws-lcd-128-lib/QMI8658/: QMI8658.c
